# magic-llm

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: magic_llm_client_usage.md
magic_llm/: __init__.py  base.py
magic_llm/agent/: __init__.py  _loop_shared.py  agent_loop.py  async_agent_loop.py  binder.py  bundle.py  config.py  decorator.py  definitions.py  errors.py  hooks.py  loader.py  normalizer.py  persistence_hooks.py  registry.py  task_executor.py  tool_adapters.py  tool_executor.py  (+1 more)
test/: conftest.py  test_agent_loop.py  test_agent_wrapper_defaults.py  test_agentic_helpers.py  test_agentic_integration.py  test_agentic_loop.py  test_agentic_message_characterization.py  test_agentic_streaming.py  test_agentic_strict_semantics.py  test_agentic_tools_workflow.py  test_alias_resolver.py  test_amazon_adapters.py  test_amazon_engine_mocked.py  test_amazon_no_sdk.py  test_async_agent_loop.py  test_base_chat_decorators.py  test_base_chat_validation.py  test_binder.py  test_browsing_adapters.py  test_browsing_tools.py  test_budget_cascade.py  test_bundle.py  test_capability_strategies.py  test_decorator.py  test_discovery_anthropic.py  test_discovery_azure.py  test_discovery_cerebras.py  test_discovery_cohere.py  test_discovery_deepinfra.py  test_discovery_deepseek.py  test_discovery_google.py  test_discovery_groq.py  test_discovery_hyperbolic.py  test_discovery_integration.py  test_discovery_mistral.py  test_discovery_nebius.py  test_discovery_novita.py  test_discovery_openai.py  test_discovery_openrouter.py  test_discovery_parasail.py  (+73 more)
(+84 files in other folders)
