[metadata]
name = magic_llm
version = attr: magic_llm.__version__
author = Andres
author_email = andres@arz.ai
description = Client to unify with an easy python implementation with llm providers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = llm
[options]
zip_safe = True
include_package_data = True
